@@ -1,0 +1,15 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<TRANSFER xmlns="http://www.interlis.ch/INTERLIS2.3">
+	<HEADERSECTION SENDER="ili2c-4.5.22-20160520" VERSION="2.3">
+		<MODELS>
+			<MODEL NAME="ExtRef23" VERSION="2011-12-22" URI="http://interlis.ch"></MODEL>
+		</MODELS>
+	</HEADERSECTION>
+	<DATASECTION>
+		<ExtRef23.TestB BID="b1">
+			<ExtRef23.TestB.ClassB1 TID="o1">
+			  <a REF="2f1774b2-8427-4d49-9810-27acb08a7839"/>
+			</ExtRef23.TestB.ClassB1>
+		</ExtRef23.TestB>
+	</DATASECTION>
+</TRANSFER>
